--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,8 +52,9 @@
 <% if log_in? %>
  <ul class="nav navbar-nav navbar-right">
         <li><span class="glyphicon glyphicon-user" aria-hidden="true"></span><%= current_user.username%></li>
-      <form action="/session" method="post">
+      <form action="/session/<%= current_user.id%>" method="post">
         <input type="hidden" name="_method" value="delete">
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <li ><button class="btn btn-default" style="width: 70px; height:25px; font-size:10px;margin-right: 10px">LOG OUT</button> </li>
       </form>    
   </ul>
