--- a/app/views/session/show_signin.html.erb
+++ b/app/views/session/show_signin.html.erb
@@ -1,4 +1,5 @@
 <form class="form-horizontal" action="/session" method="post">
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">User Name</label>
     <div class="col-sm-10">
