--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <title>MY WARDROBE</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  <%= stylesheet_link_tag "application"%>
 <!-- for the image drap and drop boxes-->
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -26,7 +28,7 @@
   </script>
 
 </head>
-<body style="overflow: auto; paddding: 0; margin: 0; height: 100%;" id="body">
+<body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
  <div class="container-fluid">
@@ -71,7 +73,21 @@
 
 
   <%= yield %>
-
- 
+<footer>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-lg-12 text-center'>
+        <ul class='list-inline'>
+            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a></li>
+        </ul> 
+       <p class='text-muted'>
+        Copyright &copy; Bono. All rights reserved.
+       </p>   
+      </div>
+    </div>
+    
+  </div>
+</footer>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
