--- a/app/views/session/show_regi.html.erb
+++ b/app/views/session/show_regi.html.erb
@@ -1,3 +1,4 @@
+
 <form class="form-horizontal" action="/regi/newuser" method="post">
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
     <div class="form-group">
@@ -19,10 +20,17 @@
       <input type="password" class="form-control" id="inputPassword3" placeholder="Password" name="password">
     </div>
   </div>
+
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Confirmation</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="Password" name="password">
+    </div>
+  </div>
  
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Sign up</button>
+      <button type="submit" class="btn btn-default">Create my account</button>
     </div>
   </div>
 </form>
