--- a/app/views/session/show_regi.html.erb
+++ b/app/views/session/show_regi.html.erb
@@ -1,36 +1,44 @@
+<div class='container'>
+    <h1 class='text-center regi_title'>Sign up</h1>
+    <div class='row regi_form'>
 
-<form class="form-horizontal" action="/regi/newuser" method="post">
-<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-    <div class="form-group">
-    <label for="inputUsername" class="col-sm-2 control-label">User Name</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputUsername" placeholder="User Name" name="user">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="Email" name="email">
-    </div>
-  </div>
+          <form class="form-horizontal" action="/regi/newuser" method="post">
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+              <%= render 'shared/error_msg' %>
+              <div class="form-group">
+                <label for="inputUsername" class="col-md-3 control-label">User Name</label>
+                <div class="col-md-9">
+                  <input type="text" class="form-control" placeholder="User Name" name="username">
+                </div>
+            </div>
 
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Password" name="password">
-    </div>
-  </div>
+            <div class="form-group">
+              <label for="inputEmail" class="col-sm-3 control-label">Email</label>
+              <div class="col-sm-9">
+                <input type="email" class="form-control" placeholder="Email" name="email">
+              </div>
+            </div>
 
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Confirmation</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Password" name="password">
+            <div class="form-group">
+              <label for="inputPassword" class="col-sm-3 control-label">Password</label>
+              <div class="col-sm-9">
+                <input type="password" class="form-control" placeholder="Password" name="password">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="password_confirmation" class="col-sm-3 control-label">Confirmation</label>
+              <div class="col-sm-9">
+                <input type="password" class="form-control" placeholder="Password Confirmation" name="password-confirmation">
+              </div>
+            </div>
+           
+            <div class="form-group">
+              <div class="col-sm-offset-3 col-sm-9">
+                <button type="submit" class="btn btn-primary">Create my account</button>
+              </div>
+            </div>
+          </form>
+     
     </div>
-  </div>
- 
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Create my account</button>
-    </div>
-  </div>
-</form>
+</div>
