--- a/app/views/session/show_signin.html.erb
+++ b/app/views/session/show_signin.html.erb
@@ -1,29 +1,39 @@
-<form class="form-horizontal" action="/session" method="post">
-<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">User Name</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail3" placeholder="username" name='username'>
-    </div>
+
+<div class='container '>  
+  <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% end %>
+  <h1 class='text-center sign_title'>Sign In</h1>
+  <div class='row sign_form'>
+    <form class="form-horizontal" action="/session" method="post">
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">User Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputEmail3" placeholder="username" name='username'>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" placeholder="password" name="password">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Remember me
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button  class="btn btn-default">Log in</button>
+          </div>
+        </div> 
+    </form>
   </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="password" name="password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input type="checkbox"> Remember me
-        </label>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button  class="btn btn-default">Log in</button>
-    </div>
-  </div> 
-</form>
+</div>
+
