--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,11 +34,28 @@ $gray-medium-light: #eaeaea;
 	}
 }
 
-.alert-success{
+@mixin flash_msg_style{
 	font-size: 3em;
 	margin-top: 4em;
-	margin-bottom: -2em;
+	margin-bottom: -3em;
 	backgourn-color: #D9EDF7;
 	border-color: #D9EDF7;
 	color: #34454E;
+}
+.alert-success{
+	@include flash_msg_style;
+}
+.alert-danger{
+	@include flash_msg_style;
+}
+.user_login{
+	padding-top: 0.8em;
+	color: #777;
+	font-size: 1.1em;
+}
+.log_out {
+	padding: 3px 20px;
+}
+.update_title{
+	@include flash_msg_style;
 }
