--- a/app/views/garment/new.html.erb
+++ b/app/views/garment/new.html.erb
@@ -1,7 +1,9 @@
 <div class="addgarment_container">
 
     <h3>Details for your new garment!</h3>
-  
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>" style='margin: 0'><%= message %></div>
+    <% end %>
 <!-- <form action="/garment" method="post"> -->
     <%= form_for @garment, url: {action: "create"}, html: {multipart: true} do |g| %>
     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
@@ -90,9 +92,9 @@
           </li>
    </ul>
   </div>
-
-    <button  type="submit" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add New</button>
+    <%= g.submit "Add new garment", class: "btn btn-primary btn-lg"%>
+<!--     <button  type="submit" class="btn btn-default btn-lg">
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add New</button> -->
   <!-- </form> -->
   <% end %>
 </div>
