--- a/app/views/session/show_signin.html.erb
+++ b/app/views/session/show_signin.html.erb
@@ -30,10 +30,15 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button  class="btn btn-default">Log in</button>
+            <button  class="btn btn-primary">Log in</button>
           </div>
         </div> 
     </form>
+  </div>
+  <div class='row'>
+    <div class='col-md-4 col-md-offset-2'> 
+      <h4>New user? <a href="/signin">Sing up now!</a> </h4>
+    </div>
   </div>
 </div>
 
